Thu Sep 23 11:43:38 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Navigation/client.cpp:
        * tests/CIF/Receptacle/client.cpp:
          Improved logging.
          Added tests for get_all_publishers, get_named_publishers,
          get_all_emitters and get_named_emitters.

Thu Sep 23 10:40:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ciao_container_base_stub.mpb:
        * MPC/config/ciao_context_impl.mpb:
        * MPC/config/ciao_executor.mpb:
        * MPC/config/ciao_extension_container.mpb:
        * MPC/config/ciao_extension_container_stub.mpb:
        * MPC/config/ciao_servant.mpb:
        * MPC/config/ciao_servant_activator.mpb:
        * MPC/config/ciao_session_container.mpb:
        * MPC/config/ciao_session_container_stub.mpb:
        * ciao/Containers/CIAO_Servant_Activator.mpc:
        * ciao/Containers/Containers.mpc:
        * ciao/Containers/Extension/Extension_Container.mpc:
        * ciao/Containers/Session/Session_Container.mpc:
        * ciao/Contexts/Context.mpc:
        * ciao/Servants/Servants.mpc:
        * MPC/config/ciao_container_base.mpb:
          More refactoring of base projects, put the generated stubs in their
          own shared library, that breaks a lot of dependencies

Thu Sep 23 10:19:19 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Component/CIF_Component.idl:
        * tests/CIF/Navigation/client.cpp:
        * tests/CIF/Receptacle/client.cpp:
          Extended test with publishers, emitters and consumers. Extended
          receptacle test with get_all_consumers and get_named_consumers.

Thu Sep 23 10:08:04 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ciao_servant.mpb:
        * MPC/config/ciao_session_container_stub.mpb:
        * ciao/Containers/Session/Session_Container.mpc:
          Moved session container stub to their own shared library

Thu Sep 23 07:55:57 UTC 2010  Marijke Hengstmengelt  <mhengstmengel@remedy.nl>
